res/css/nav.css
.nav-container {
    display: grid;
    grid-template-columns: min-content 1fr min-content;
    grid-template-rows: 1fr;
    gap: 0px 0px;
    grid-auto-flow: row;
    grid-template-areas:
        "logo . navbuttons";
    height: 100%;
}

.logo {
    grid-area: logo;
    display: grid;
    place-content: center;
}

.logo a {
    display: grid;
    place-content: center;
}

.logo img {
    height: 4rem;
}

.navbuttons {
    grid-area: navbuttons;
    display: flex;
}

.navbutton {
    display: grid;
    place-items: center;
    padding: 0 0.75rem;
    text-transform: uppercase;
    font-weight: 300;
    position: relative;
    transition: 0.4s;
    cursor: pointer;
    height: 100%;
}

.navbutton svg {
    color: var(--secondaryColor);
    width: 2rem;
    height: 3rem;
    transform: translateY(-0.125rem);
}

.navbutton:hover {
    background-color: var(--secondaryColor);
}

.navbutton:hover svg {
    color: var(--black);
}

nav a {
    text-decoration: none;
    color: var(--white);
}

nav {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr auto;
    gap: 0px 0px;
    grid-auto-flow: row;
    grid-template-areas:
        "nav_main"
        "nav_settings";
    overflow: auto;
}

nav>div {
    padding: 0.5rem;
}

.nav_main {
    grid-area: nav_main;
    overflow: auto;
}

.nav_settings {
    grid-area: nav_settings;
    border-top: 1px solid var(--gray);
}

.nav_entry {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-template-rows: 1fr;
    grid-auto-columns: 1fr;
    grid-auto-rows: 1fr;
    gap: 0px 0px;
    grid-auto-flow: row;
    grid-template-areas:
        "nav_entry_icon nav_entry_text";
    height: fit-content;
    margin: 0.5rem;
    padding: 0.5rem;
    background-color: var(--gray);
    border-radius: 0.5rem;
    outline: 0px solid var(--primaryColor);
    transition: 0.1s;
}

.nav_entry_icon {
    grid-area: nav_entry_icon;
    display: grid;
    place-items: center;
}

.nav_entry_icon svg {
    width: 2rem;
    height: 2rem;
}

.nav_entry_text {
    grid-area: nav_entry_text;
    display: grid;
    place-items: center;
    font-size: var(--subheadingSize);
}

.nav_entry:hover {
    outline: 1px solid var(--primaryColor);
    transform: scale(1.025);
}

nav hr {
    margin: 0.75rem 0.5rem;
    border: 1px solid var(--gray);
    border-radius: 1px;
}

